--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -18,7 +18,7 @@
         android:id="@+id/imagelogo"
         android:layout_width="107dp"
         android:layout_height="109dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="150dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="1dp"
         android:fontFamily="@font/inter"
         android:text="Login"
         android:textColor="@color/white"
@@ -95,7 +95,6 @@
 
 
 
-
     <TextView
         android:id="@+id/textcontraseña"
         android:layout_width="wrap_content"
@@ -108,6 +107,7 @@
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
+
 
     <!-- Caja de texto transparente con bordes morados -->
     <RelativeLayout
@@ -141,7 +141,10 @@
             android:textOff=""
             android:button="@drawable/toggle_eye"
             android:padding="8dp" />
+
     </RelativeLayout>
+
+
 
     <Button
         android:id="@+id/buttoninicio"
@@ -176,7 +179,8 @@
             android:id="@+id/buttonRegistrar"
             android:layout_width="wrap_content"
             android:layout_height="26dp"
-            android:layout_marginStart="138dp"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="126dp"
             android:layout_marginTop="8dp"
             android:background="@android:color/transparent"
             android:fontFamily="@font/inter"
@@ -191,7 +195,7 @@
             android:layout_height="22dp"
             android:layout_below="@+id/buttonRegistrar"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="150dp"
+            android:layout_marginStart="139dp"
             android:layout_marginTop="11dp"
             android:background="@android:color/transparent"
             android:fontFamily="@font/inter"
