--- a/app/src/main/res/menu/menubajo.xml
+++ b/app/src/main/res/menu/menubajo.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/itemHome"
+        android:id="@+id/navigationHome"
         android:title="Home"
         android:icon="@drawable/homicon" />
     <item
-        android:id="@+id/itemRanking"
+        android:id="@+id/navigationRanking"
         android:title="Ranking"
         android:icon="@drawable/rankicon"/>
     <item
-        android:id="@+id/itemLogros"
+        android:id="@+id/navigationLogros"
         android:title="Logros"
         android:icon="@drawable/logroiconn"/>
     <item
-        android:id="@+id/itemArticulos"
+        android:id="@+id/navigationArticulos"
         android:title="Articulos"
         android:icon="@drawable/articonn"/>
 </menu>
