--- a/app/src/main/res/layout/fragment_fragmentcontenedor.xml
+++ b/app/src/main/res/layout/fragment_fragmentcontenedor.xml
@@ -6,8 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
-
     <ImageView
         android:id="@+id/imagefondo"
         android:layout_width="0dp"
@@ -19,7 +17,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         tools:ignore="MissingConstraints" />
-
 
     <TextView
         android:id="@+id/welcome"
@@ -41,7 +38,7 @@
         android:layout_marginStart="40dp"
         android:layout_marginTop="50dp"
         android:fontFamily="@font/arbutus"
-        android:text="Un universo de creativo\ncodigo\nte espera por decifrar"
+        android:text="Un universo de codigo\ncreativo\nte espera por decifrar"
         android:textAlignment="center"
         android:textColor="#898888"
         android:textSize="24dp"
@@ -71,9 +68,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/imagehtml"
             android:layout_width="wrap_content"
             android:layout_height="241dp"
             android:src="@drawable/htmlejemplo" />
