--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,4 +3,17 @@
     <style name="CircleImageView">
         <item name="cornerSize">50%</item>
     </style>
+        <style name="BackgroundWithOpacity">
+            <item name="android:background">#80FFFFFF</item> <!-- Cambia el valor #80 para ajustar la opacidad -->
+        </style>
+        <style name="Background2">
+            <item name="android:background">#80FFFFFF</item> <!-- Cambia el valor #80 para ajustar la opacidad -->
+        </style>
+        <style name="Background3">
+            <item name="android:background">#80FFFFFF</item> <!-- Cambia el valor #80 para ajustar la opacidad -->
+        </style>
+        <style name="Background4">
+            <item name="android:background">#80FFFFFF</item> <!-- Cambia el valor #80 para ajustar la opacidad -->
+        </style>
+
 </resources>
